add: changed classes storing model
